Button text align fixed

--- a/css/sculptor.css
+++ b/css/sculptor.css
@@ -961,7 +961,7 @@ h6, .s-h6 {
   border-radius: 52px;
   color: #FFFFFF;
   height: 36px;
-  line-height: 36px;
+  line-height: 1em;
   font-size: 1em;
   font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   text-decoration: none;
