--- a/sass/module/_button.sass
+++ b/sass/module/_button.sass
@@ -7,7 +7,7 @@
   +border-radius($radius-heavy)
   color: $white
   height: $button-height
-  line-height: $button-height
+  line-height: $paragraph-size
   font-size: $paragraph-size
   font-family: $font
   text-decoration: none
@@ -46,4 +46,3 @@
 
 .s-button--block
   width: 100%
-
